--- a/bitnami/zookeeper/templates/statefulset.yaml
+++ b/bitnami/zookeeper/templates/statefulset.yaml
@@ -27,7 +27,7 @@ spec:
     spec:
       {{- include "zookeeper.imagePullSecrets" . | nindent 6 }}
       {{- if .Values.serviceAccount.create }}
-      serviceAccountName: {{ .Values.serviceAccount.name | default (include "zookeeper.fullname" .) }}
+      serviceAccountName: {{ default (include "zookeeper.fullname" .) .Values.serviceAccount.name }}
       {{- end }}
       {{- if .Values.securityContext.enabled }}
       securityContext:
